@@ -19,6 +19,7 @@ import reactor.core.publisher.Mono;
 
 import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
+import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
@@ -32,10 +33,8 @@ public class KycService {
 
     @Autowired
     private KycRepository kycRepository;
-
     @Autowired
     private R2dbcEntityTemplate r2dbcEntityTemplate;
-
     @Autowired
     private WebClient webClient;
 
@@ -54,137 +53,148 @@ public class KycService {
     @Value("${auth.service.url}")
     private String authServiceUrl;
 
+
     public Mono<String> initiateKyc(KycRequest request, String token) {
-        logger.debug("Entering initiateKyc for username: {}", request.getUsername());
-        logger.info("Initiating KYC for externalUserId: {}", request.getUsername());
-        return verifyUser(request.getUsername(), token)
+        logger.debug("Initiating KYC for email: {}", request.getEmail());
+        return verifyUser(request.getEmail(), token)
                 .flatMap(userData -> {
-                    logger.debug("User verified: {}", userData);
-                    return kycRepository.findByExternalUserId(request.getUsername())
+                    String externalId = (String) userData.get("externalId");
+                    if (externalId == null || externalId.isEmpty()) {
+                        logger.warn("No externalId found for email: {}. Cannot proceed with KYC.", request.getEmail());
+                        return Mono.error(new CustomException("User externalId not found", HttpStatus.BAD_REQUEST));
+                    }
+                    logger.debug("Using externalId: {}", externalId);
+                    return kycRepository.findByExternalUserId(externalId)
                             .switchIfEmpty(Mono.just(new KycRecord()))
                             .flatMap(existingRecord -> {
+                                logger.debug("Existing KYC record: {}", existingRecord);
                                 if (existingRecord.getExternalUserId() != null && existingRecord.isVerified()) {
-                                    logger.warn("KYC already verified for: {}", request.getUsername());
+                                    logger.warn("KYC already verified for externalId: {}", externalId);
                                     return Mono.error(new CustomException("KYC already verified", HttpStatus.BAD_REQUEST));
                                 }
-                                return generateSumsubAccessToken(request.getUsername())
-                                        .flatMap(accessToken -> {
-                                            logger.info("Generated Sumsub access token for {}: {}", request.getUsername(), accessToken);
-                                            return saveInitialKycRecord(request.getUsername(), accessToken);
-                                        });
+                                return generateSumsubAccessToken(externalId)
+                                        .doOnNext(accessToken -> logger.debug("Generated Sumsub token: {}", accessToken))
+                                        .flatMap(accessToken -> saveInitialKycRecord(externalId, accessToken))
+                                        .doOnError(e -> logger.error("Failed to initiate KYC for externalId: {}", externalId, e));
                             });
                 })
-                .doOnError(e -> logger.error("Initiate KYC failed: {}", e.getMessage(), e));
+                .doOnError(e -> logger.error("KYC initiation failed for email: {}", request.getEmail(), e));
     }
 
     public Mono<String> getKycStatusFromSumsub(String externalUserId) {
-        try {
-            String encodedUserId = java.net.URLEncoder.encode(externalUserId, StandardCharsets.UTF_8.name());
-            String url = sumsubApiUrl + "/resources/applicants/-;externalUserId=" + encodedUserId + "/one";
-            logger.debug("Fetching KYC status from Sumsub URL: {}", url);
-            String timestamp = String.valueOf(System.currentTimeMillis() / 1000L);
-            String method = "GET";
-            String path = "/resources/applicants/-;externalUserId=" + encodedUserId + "/one";
-            String body = "";
-            String signature = generateSumsubSignature(timestamp, method, path, body);
-            logger.debug("Sumsub request headers - X-App-Token: {}, X-App-Access-Ts: {}, X-App-Access-Sig: {}",
-                    sumsubApiToken, timestamp, signature);
+        String encodedUserId = java.net.URLEncoder.encode(externalUserId, StandardCharsets.UTF_8);
+        String url = sumsubApiUrl + "/resources/applicants/-;externalUserId=" + encodedUserId + "/one";
+        String timestamp = String.valueOf(System.currentTimeMillis() / 1000L);
+        String method = "GET";
+        String path = "/resources/applicants/-;externalUserId=" + encodedUserId + "/one";
+        String body = "";
+        String signature = generateSumsubSignature(timestamp, method, path, body);
 
-            return webClient.get()
-                    .uri(url)
-                    .header("X-App-Token", sumsubApiToken)
-                    .header("X-App-Access-Ts", timestamp)
-                    .header("X-App-Access-Sig", signature)
-                    .retrieve()
-                    .onStatus(status -> status.is4xxClientError() || status.is5xxServerError(),
-                            response -> response.bodyToMono(String.class)
-                                    .doOnNext(bodyStr -> logger.error("Sumsub API error response: {}", bodyStr))
-                                    .map(bodyStr -> new CustomException("Sumsub error: " + bodyStr, response.statusCode())))
-                    .bodyToMono(new ParameterizedTypeReference<Map<String, Object>>() {})
-                    .map(result -> {
-                        Map<String, Object> review = (Map<String, Object>) result.get("review");
-                        String status = review != null ? (String) review.get("reviewStatus") : "pending";
-                        logger.debug("Sumsub status for {}: {}", externalUserId, status);
-                        return status != null ? status : "pending";
-                    })
-                    .doOnError(e -> logger.error("Failed to fetch KYC status from Sumsub: {}", e.getMessage()));
-        } catch (Exception e) {
-            logger.error("Error in getKycStatusFromSumsub: {}", e.getMessage());
-            return Mono.error(new CustomException("Failed to fetch KYC status", HttpStatus.INTERNAL_SERVER_ERROR));
-        }
+        return webClient.get()
+                .uri(url)
+                .header("X-App-Token", sumsubApiToken)
+                .header("X-App-Access-Ts", timestamp)
+                .header("X-App-Access-Sig", signature)
+                .retrieve()
+                .bodyToMono(new ParameterizedTypeReference<Map<String, Object>>() {
+                })
+                .map(result -> {
+                    Map<String, Object> review = (Map<String, Object>) result.get("review");
+                    return review != null ? (String) review.get("reviewStatus") : "pending";
+                })
+                .onErrorResume(e -> Mono.error(new CustomException("Failed to fetch KYC status", HttpStatus.INTERNAL_SERVER_ERROR)));
     }
 
-    public Mono<Void> updateKycStatusInDb(String externalUserId, String kycStatus) {
-        return kycRepository.findByExternalUserId(externalUserId)
-                .flatMap(kycRecord -> {
-                    kycRecord.setReviewStatus(kycStatus);
-                    kycRecord.setVerified("completed".equalsIgnoreCase(kycStatus));
-                    kycRecord.setUpdatedAt(LocalDateTime.now());
-                    return kycRepository.save(kycRecord)
-                            .doOnSuccess(saved -> logger.info("Updated KYC status in DB for: {}", externalUserId));
-                })
-                .switchIfEmpty(Mono.defer(() -> {
-                    KycRecord newRecord = new KycRecord();
-                    newRecord.setExternalUserId(externalUserId);
-                    newRecord.setReviewStatus(kycStatus);
-                    newRecord.setVerified("completed".equalsIgnoreCase(kycStatus));
-                    newRecord.setCreatedAt(LocalDateTime.now());
-                    newRecord.setUpdatedAt(LocalDateTime.now());
-                    return r2dbcEntityTemplate.insert(newRecord)
-                            .doOnSuccess(saved -> logger.info("Inserted new KYC record in DB for: {}", externalUserId));
-                }))
-                .then();
+    public Mono<String> getKycStatusFromSumsubByEmail(String email) {
+        return verifyUser(email, null)
+                .flatMap(userData -> {
+                    String externalId = (String) userData.get("externalId");
+                    return getKycStatusFromSumsub(externalId);
+                });
+    }
+
+    public Mono<Void> updateKycStatusInDb(String email, String kycStatus) {
+        return verifyUser(email, null)
+                .flatMap(userData -> {
+                    String externalId = (String) userData.get("externalId");
+                    return kycRepository.findByExternalUserId(externalId)
+                            .flatMap(kycRecord -> {
+                                kycRecord.setReviewStatus(kycStatus);
+                                kycRecord.setVerified("completed".equalsIgnoreCase(kycStatus));
+                                kycRecord.setUpdatedAt(LocalDateTime.now());
+                                return kycRepository.save(kycRecord);
+                            })
+                            .switchIfEmpty(Mono.defer(() -> {
+                                KycRecord newRecord = new KycRecord();
+                                newRecord.setExternalUserId(externalId);
+                                newRecord.setReviewStatus(kycStatus);
+                                newRecord.setVerified("completed".equalsIgnoreCase(kycStatus));
+                                newRecord.setCreatedAt(LocalDateTime.now());
+                                newRecord.setUpdatedAt(LocalDateTime.now());
+                                return r2dbcEntityTemplate.insert(newRecord);
+                            }))
+                            .then();
+                });
     }
 
     @Retry(name = "sumsub")
     private Mono<String> generateSumsubAccessToken(String externalUserId) {
-        try {
-            String encodedUserId = java.net.URLEncoder.encode(externalUserId, StandardCharsets.UTF_8.name());
-            String encodedLevel = java.net.URLEncoder.encode(sumsubVerificationLevel, StandardCharsets.UTF_8.name());
-            String path = "/resources/accessTokens?userId=" + encodedUserId + "&levelName=" + encodedLevel + "&ttlInSecs=3600";
-            String url = sumsubApiUrl + path;
-            String timestamp = String.valueOf(System.currentTimeMillis() / 1000L);
-            String method = "POST";
-            String body = "";
-            String signature = generateSumsubSignature(timestamp, method, path, body);
-            logger.debug("Generating Sumsub access token - URL: {}", url);
+        String encodedUserId = URLEncoder.encode(externalUserId, StandardCharsets.UTF_8);
+        String encodedLevel = URLEncoder.encode(sumsubVerificationLevel, StandardCharsets.UTF_8);
+        String path = "/resources/accessTokens?userId=" + encodedUserId + "&levelName=" + encodedLevel + "&ttlInSecs=3600";
+        String url = sumsubApiUrl + path;
+        String timestamp = String.valueOf(System.currentTimeMillis() / 1000L);
+        String method = "POST";
+        String body = "";  // Single declaration for signature
+        String signature = generateSumsubSignature(timestamp, method, path, body);
 
-            return webClient.post()
-                    .uri(url)
-                    .header("X-App-Token", sumsubApiToken)
-                    .header("X-App-Access-Ts", timestamp)
-                    .header("X-App-Access-Sig", signature)
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .retrieve()
-                    .onStatus(status -> status.is4xxClientError() || status.is5xxServerError(),
-                            response -> response.bodyToMono(String.class)
-                                    .map(bodyStr -> new CustomException("Sumsub error: " + bodyStr, response.statusCode())))
-                    .bodyToMono(new ParameterizedTypeReference<Map<String, Object>>() {})
-                    .map(result -> (String) result.get("token"))
-                    .doOnError(e -> logger.error("Failed to generate Sumsub access token: {}", e.getMessage(), e));
-        } catch (Exception e) {
-            return Mono.error(e);
-        }
-    }
+        logger.debug("Sumsub Access Token Request: URL={}, Token={}, Timestamp={}, Signature={}", url, sumsubApiToken, timestamp, signature);
 
-    private Mono<Map<String, Object>> verifyUser(String username, String token) {
-        logger.debug("Verifying user {} with auth-service", username);
-        return webClient.get()
-                .uri(authServiceUrl + "/user/" + username)
-                .header("Authorization", token)
+        return webClient.post()
+                .uri(url)
+                .header("X-App-Token", sumsubApiToken)
+                .header("X-App-Access-Ts", timestamp)
+                .header("X-App-Access-Sig", signature)
+                .contentType(MediaType.APPLICATION_JSON)
                 .retrieve()
+                .onStatus(HttpStatus.UNAUTHORIZED::equals, response ->
+                        response.bodyToMono(String.class)
+                                .map(errorBody -> {  // Renamed to avoid confusion
+                                    logger.error("Sumsub 401 Response: {}", errorBody);
+                                    return new CustomException("Sumsub 401: " + errorBody, HttpStatus.UNAUTHORIZED);
+                                }))
                 .bodyToMono(new ParameterizedTypeReference<Map<String, Object>>() {})
-                .doOnError(e -> logger.error("Failed to verify user: {}", e.getMessage()))
-                .switchIfEmpty(Mono.error(new CustomException("User not found", HttpStatus.NOT_FOUND)));
+                .map(result -> (String) result.get("token"))
+                .doOnError(e -> logger.error("Sumsub token generation failed: {}", e.getMessage()));
     }
 
+private Mono<Map<String, Object>> verifyUser(String email, String token) {
+    return webClient.get()
+            .uri(authServiceUrl + "/user") // Append only "/user" if authServiceUrl ends with "/api/auth/"
+            .header("Authorization", token != null ? token : "Bearer dummy")
+            .retrieve()
+            .bodyToMono(new ParameterizedTypeReference<Map<String, Object>>() {})
+            .flatMap(response -> {
+                Map<String, Object> userData = (Map<String, Object>) response.get("data");
+                if (userData == null) {
+                    logger.error("No 'data' field in auth response for email: {}", email);
+                    return Mono.error(new CustomException("Invalid auth response", HttpStatus.INTERNAL_SERVER_ERROR));
+                }
+                if (!email.equals(userData.get("email"))) {
+                    logger.warn("Email mismatch: request={} vs response={}", email, userData.get("email"));
+                    return Mono.error(new CustomException("User not found or email mismatch", HttpStatus.NOT_FOUND));
+                }
+                return Mono.just(userData);
+            })
+            .doOnNext(data -> logger.debug("Verified user data: {}", data))
+            .doOnError(e -> logger.error("Failed to verify user {}: {}", email, e.getMessage()));
+}
     public Mono<String> saveInitialKycRecord(String externalUserId, String accessToken) {
         return kycRepository.findByExternalUserId(externalUserId)
                 .flatMap(existingRecord -> {
                     existingRecord.setReviewStatus("init");
                     existingRecord.setUpdatedAt(LocalDateTime.now());
-                    return kycRepository.save(existingRecord)
-                            .thenReturn(accessToken);
+                    return kycRepository.save(existingRecord).thenReturn(accessToken);
                 })
                 .switchIfEmpty(Mono.defer(() -> {
                     KycRecord newRecord = new KycRecord();
@@ -196,9 +206,13 @@ public class KycService {
                 }));
     }
 
-    public Mono<KycRecord> getKycRecordFromDb(String externalUserId) {
-        return kycRepository.findByExternalUserId(externalUserId)
-                .switchIfEmpty(Mono.error(new CustomException("No KYC record found for " + externalUserId, HttpStatus.NOT_FOUND)));
+    public Mono<KycRecord> getKycRecordFromDbByEmail(String email) {
+        return verifyUser(email, null)
+                .flatMap(userData -> {
+                    String externalId = (String) userData.get("externalId");
+                    return kycRepository.findByExternalUserId(externalId);
+                })
+                .switchIfEmpty(Mono.error(new CustomException("No KYC record found for email " + email, HttpStatus.NOT_FOUND)));
     }
 
     public void updateKycStatus(Map<String, Object> webhookData) {
@@ -211,7 +225,6 @@ public class KycService {
             logger.error("Invalid webhook data: {}", webhookData);
             return;
         }
-
         String lookupId = externalUserId != null ? externalUserId : applicantId;
 
         kycRepository.findByExternalUserId(lookupId)
@@ -230,24 +243,19 @@ public class KycService {
                         kycRecord.setRejectLabels((String) reviewResult.get("rejectLabels"));
                     }
                     kycRecord.setUpdatedAt(LocalDateTime.now());
-                    kycRepository.save(kycRecord)
-                            .doOnSuccess(saved -> logger.info("Webhook updated KYC status in DB for: {}", lookupId))
-                            .subscribe();
-                    logger.info("Webhook processed - applicantId: {}, reviewStatus: {}", applicantId, reviewStatus);
+                    kycRepository.save(kycRecord).subscribe();
                 }).subscribe();
     }
 
     private String generateSumsubSignature(String timestamp, String method, String path, String body) {
         try {
             String data = timestamp + method + path + body;
-            logger.debug("Signature data: {}", data);
             Mac mac = Mac.getInstance("HmacSHA256");
             SecretKeySpec secretKeySpec = new SecretKeySpec(sumsubApiSecret.getBytes(StandardCharsets.UTF_8), "HmacSHA256");
             mac.init(secretKeySpec);
             byte[] hmacBytes = mac.doFinal(data.getBytes(StandardCharsets.UTF_8));
             return bytesToHex(hmacBytes);
         } catch (NoSuchAlgorithmException | InvalidKeyException e) {
-            logger.error("Failed to generate Sumsub signature: {}", e.getMessage());
             throw new RuntimeException("Signature generation failed", e);
         }
     }
@@ -256,9 +264,7 @@ public class KycService {
         StringBuilder hexString = new StringBuilder();
         for (byte b : bytes) {
             String hex = Integer.toHexString(0xff & b);
-            if (hex.length() == 1) {
-                hexString.append('0');
-            }
+            if (hex.length() == 1) hexString.append('0');
             hexString.append(hex);
         }
         return hexString.toString();
